# rpi3-epaper-dashboard

./: .gitignore  dashboard-watcher.path  dashboard-watcher.service  dashboard.service  deploy.py  epd-dashboard-watcher.path  epd-dashboard-watcher.service  epd-dashboard.service  mise.toml  pyproject.toml
src/dashboard/: __main__.py  dashboard.py  data.py  display.py  emulator.html  epd.py  notifications.py  personality.py  system.py  widgets.py
src/epd_dashboard/: __init__.py  __main__.py  dashboard.py  epd.py
tests/: test_dashboard.py  test_data.py  test_display.py  test_epd.py  test_notifications.py  test_personality.py  test_system.py  test_widgets.py
