[project]
name = "dashboard"
version = "0.1.0"
description = "Widget dashboard for Waveshare 2.7\" e-Paper HAT V2 on Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "pyyaml",
]

[project.optional-dependencies]
pi = ["spidev", "lgpio"]

[project.scripts]
dashboard = "dashboard.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.hatch.build.targets.wheel.shared-data]
"fonts" = "share/dashboard/fonts"
