[project]
name = "dashboard"
version = "0.1.0"
description = "Widget dashboard for Waveshare 2.7\" e-Paper HAT V2 on Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "pyyaml",
    "spidev; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "lgpio; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
]

[project.scripts]
dashboard = "dashboard.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.hatch.build.targets.wheel.shared-data]
"fonts" = "share/dashboard/fonts"
