[project]
name = "dashboard"
version = "0.1.0"
description = "Widget dashboard for Waveshare 2.7\" e-Paper HAT V2 on Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "pyyaml",
    "spidev; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "lgpio; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["dashboard"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__",
    "import lgpio",
    "import spidev",
    "pragma: no cover",
]

[project.scripts]
dashboard = "dashboard.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.hatch.build.targets.wheel.shared-data]
"fonts" = "share/dashboard/fonts"
